--- a/404.html
+++ b/404.html
@@ -47,24 +47,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px " data-bs-toggle="tab" href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px active border-active-danger border-top-2"
-										data-bs-toggle="tab" href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -96,7 +99,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -174,12 +177,12 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center"></i>
+								<i
+									class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
-									class="btn btn-danger d-none d-md-inline fw-bolder">
+								<a href="sign-up.html" class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
 							</div>
@@ -217,7 +220,7 @@
 						<h4 class="text-danger mb-4">EĞİTİMLER</h4>
 						<h2 class="fs-2x fw-bold">Bu eğitimler ilgini çekebilir</h2>
 					</div>
-					<div class="align-self-end">
+					<div class="align-self-end d-none d-md-inline-block">
 						<!--begin::Button-->
 						<button class="btn btn-icon btn-active-color-dark rounded-circle me-5" id="popular_slider_prev"
 							style="border:1px solid #E1E3EA; width:3rem;height:3rem;">
@@ -243,7 +246,7 @@
 							data-tns-responsive="{1200: {items: 3.5}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -268,7 +271,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -293,7 +296,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -318,7 +321,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -381,7 +384,7 @@
 									class="form-control form-control-solid bg-white border-gray-400 ps-10 min-w-400px"
 									name="search" value="" placeholder="e-posta adresinizi giriniz" />
 							</div>
-							<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark">
+							<a href="sign-in.html" class="btn btn-dark">
 								e-Bülten’e abone ol
 							</a>
 						</div>
@@ -394,7 +397,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -431,7 +434,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
