--- a/blog-2.html
+++ b/blog-2.html
@@ -47,24 +47,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px " data-bs-toggle="tab" href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px active border-active-danger border-top-2"
-										data-bs-toggle="tab" href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2 active"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -96,7 +99,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -174,11 +177,11 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center"></i>
+								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-up.html"
 									class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
@@ -202,7 +205,7 @@
 				<div class="container py-6">
 					<ol class="breadcrumb breadcrumb-line text-muted fs-6 fw-semibold">
 						<li class="breadcrumb-item">
-							<a href="#" class=""><i class="ki-duotone ki-home"></i> </a>
+							<a href="homepage-1.html"><i class="ki-duotone ki-home"></i> </a>
 						</li>
 						<li class="breadcrumb-item"><a href="#" class=" text-gray-900">Tüm Eğitimler</a></li>
 					</ol>
@@ -1283,7 +1286,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -1320,7 +1323,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
