--- a/education-detail.html
+++ b/education-detail.html
@@ -47,25 +47,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px active" data-bs-toggle="tab"
-										href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -180,7 +182,7 @@
 								<i class="bi bi-heart-fill fs-4 text-gray-300 mx-8 align-self-center"></i>
 								<a href="authentication/layouts/corporate/sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-3">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-up.html"
 									class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
@@ -830,7 +832,7 @@
 									<h4 class="text-danger mb-4">EĞİTİMLER</h4>
 									<h2 class="fs-2x fw-bold">Bu eğitimler de ilgini çekebilir</h2>
 								</div>
-								<div class="align-self-end">
+								<div class="align-self-end d-none d-md-inline-block">
 									<!--begin::Button-->
 									<button class="btn btn-icon btn-active-color-dark rounded-circle me-5"
 										id="popular_slider_prev"
@@ -860,7 +862,7 @@
 										data-tns-responsive="{1200: {items: 3.9999}, 992: {items: 3}}">
 										<!--begin::Item-->
 										<div class="card border-gray-300 my-2 mx-5">
-											<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+											<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 												src="assets/media/course/course-1.svg" />
 											<div class="d-flex justify-content-between w-100 px-5 py-4">
 												<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -887,7 +889,7 @@
 										<!--end::Item-->
 										<!--begin::Item-->
 										<div class="card border-gray-300 my-2 mx-5">
-											<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+											<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 												src="assets/media/course/course-2.svg" />
 											<div class="d-flex justify-content-between w-100 px-5 py-4">
 												<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -915,7 +917,7 @@
 										<!--end::Item-->
 										<!--begin::Item-->
 										<div class="card border-gray-300 my-2 mx-5">
-											<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+											<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 												src="assets/media/course/course-3.svg" />
 											<div class="d-flex justify-content-between w-100 px-5 py-4">
 												<span class="badge badge-light-secondary h-20px">GELİŞİM
@@ -943,7 +945,7 @@
 										<!--end::Item-->
 										<!--begin::Item-->
 										<div class="card border-gray-300 my-2 mx-5">
-											<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+											<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 												src="assets/media/course/course-4.svg" />
 											<div class="d-flex justify-content-between w-100 px-5 py-4">
 												<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -1044,7 +1046,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
