--- a/faq.html
+++ b/faq.html
@@ -47,24 +47,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px " data-bs-toggle="tab" href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px active border-active-danger border-top-2"
-										data-bs-toggle="tab" href="#kt_tab_pane_2">Tüm Eğitimler</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
+								</li>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link h-48px border-active-danger border-top-2 active" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -96,7 +99,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -174,11 +177,11 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center"></i>
+								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-up.html"
 									class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
@@ -218,7 +221,8 @@
 					<div class="accordion faq-acordion" id="kt_accordion_1">
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_1">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 bg-gray-100 text-gray-900"
+								<button
+									class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 bg-gray-100 text-gray-900"
 									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_1"
 									aria-expanded="true" aria-controls="kt_accordion_1_body_1">
 									Do you offer discounts for students?
@@ -250,8 +254,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_2">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_2"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_2"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_2">
 									Do you offer special pricing for big teams?
 								</button>
@@ -282,8 +286,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_3">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_3"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_3"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_3">
 									What is the past experience of your teachers?
 								</button>
@@ -314,8 +318,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_4">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_4"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_4"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_4">
 									Do you offer discounts for non-profits?
 								</button>
@@ -346,8 +350,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_5">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_5"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_5"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_5">
 									Do you offer special pricing for big teams?
 								</button>
@@ -378,8 +382,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_6">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_6"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_6"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_6">
 									What is the past experience of your teachers?
 								</button>
@@ -410,8 +414,8 @@
 
 						<div class="accordion-item mb-6">
 							<h2 class="accordion-header" id="kt_accordion_1_header_7">
-								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed" type="button"
-									data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_7"
+								<button class="accordion-button fs-4 fw-semibold bg-gray-100 text-gray-900 collapsed"
+									type="button" data-bs-toggle="collapse" data-bs-target="#kt_accordion_1_body_7"
 									aria-expanded="false" aria-controls="kt_accordion_1_body_7">
 									Do you offer discounts for non-profits?
 								</button>
@@ -488,7 +492,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -525,7 +529,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
