--- a/homepage-1.html
+++ b/homepage-1.html
@@ -41,10 +41,10 @@
 			<div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg">
 				<!--begin::Header-->
 				<div class="top-bar d-flex justify-content-between px-lg-5">
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="eu-logo" alt="Logo" src="assets/media/logos/eu-logo.svg" />
 					</a>
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="top-logo" alt="Logo" src="assets/media/logos/light-logo.svg" />
 					</a>
 				</div>
@@ -61,25 +61,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px active" data-bs-toggle="tab"
-										href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2 active"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -111,7 +113,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -189,11 +191,11 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center"></i>
+								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-up.html"
 									class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
@@ -217,12 +219,11 @@
 								Uzmanlar eşliğinde öğrenin, hedeflerinize bir adım daha yaklaşın.
 								Sizi bekleyen yeni fırsatları keşfedin.
 							</p>
-							<div class="flex-equal text-start">
-								<a href="authentication/layouts/corporate/sign-in.html"
-									class="btn btn-danger fw-bolder me-5 me-lg-3">
+							<div class="flex-equal text-start d-flex">
+								<a href="sign-in.html" class="btn btn-danger fw-bolder me-5 me-lg-3">
 									Hemen Başlayın
 								</a>
-								<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark fw-bolder">
+								<a href="education-list.html" class="btn btn-dark fw-bolder">
 									Tüm eğitimleri keşfedin
 								</a>
 							</div>
@@ -366,7 +367,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -391,7 +392,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -416,7 +417,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -491,7 +492,7 @@
 							data-tns-responsive="{1200: {items: 3.5}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -516,7 +517,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -541,7 +542,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -566,7 +567,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -716,11 +717,10 @@
 				</div>
 				<!--end::Row-->
 				<div class="flex-equal text-center mt-5">
-					<a href="authentication/layouts/corporate/sign-in.html"
-						class="btn btn-danger fw-bolder me-5 me-lg-3">
+					<a href="sign-in.html" class="btn btn-danger fw-bolder me-5 me-lg-3">
 						Hemen Başlayın
 					</a>
-					<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark fw-bolder">
+					<a href="education-list.html" class="btn btn-dark fw-bolder">
 						Tüm eğitimleri keşfedin
 					</a>
 				</div>
@@ -758,7 +758,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -787,7 +787,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 my-2 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">MESLEKİ EĞİTİMLER</span>
@@ -986,7 +986,7 @@
 							Eğitimlerimize ait duyuru, kampanya ve haberlerimizi takip edebilirsiniz.</small>
 					</div>
 					<div class="align-self-end">
-						<a href="authentication/layouts/corporate/sign-in.html"
+						<a href="blog-1.html"
 							class="btn bg-gray-200 bg-hover-gray-400 ">
 							<b>Bloga gözat</b>
 						</a>
@@ -1361,7 +1361,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -1398,7 +1398,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
