--- a/homepage-2.html
+++ b/homepage-2.html
@@ -41,10 +41,10 @@
 			<div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg">
 				<!--begin::Header-->
 				<div class="top-bar d-flex justify-content-between px-lg-5">
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="eu-logo" alt="Logo" src="assets/media/logos/eu-logo.svg" />
 					</a>
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="top-logo" alt="Logo" src="assets/media/logos/light-logo.svg" />
 					</a>
 				</div>
@@ -61,25 +61,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px active" data-bs-toggle="tab"
-										href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2 active"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -112,7 +114,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/navbar-light-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -194,7 +196,7 @@
 								<i class="bi bi-heart-fill fs-4 text-gray-300 mx-8 align-self-center"></i>
 								<a href="authentication/layouts/corporate/sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-3">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-up.html"
 									class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
@@ -220,7 +222,7 @@
 									Sizi bekleyen yeni fırsatları keşfedin.
 								</p>
 								<div class="flex-equal mt-20">
-									<a href="authentication/layouts/corporate/sign-in.html"
+									<a href="sign-in.html"
 										class="btn btn-danger fw-bolder me-5 me-lg-3">
 										Hemen Başlayın
 									</a>
@@ -365,7 +367,7 @@
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
 								<a href="education-detail.html">
-									<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+									<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 										src="assets/media/course/course-1.svg" />
 									<div class="d-flex justify-content-between w-100 px-5 py-4">
 										<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -392,7 +394,7 @@
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
 								<a href="education-detail.html">
-									<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+									<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 										src="assets/media/course/course-2.svg" />
 									<div class="d-flex justify-content-between w-100 px-5 py-4">
 										<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -419,7 +421,7 @@
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
 								<a href="education-detail.html">
-									<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+									<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 										src="assets/media/course/course-3.svg" />
 									<div class="d-flex justify-content-between w-100 px-5 py-4">
 										<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -446,7 +448,7 @@
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
 								<a href="education-detail.html">
-									<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+									<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 										src="assets/media/course/course-4.svg" />
 									<div class="d-flex justify-content-between w-100 px-5 py-4">
 										<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -522,7 +524,7 @@
 							data-tns-responsive="{1200: {items: 3.5}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -547,7 +549,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -572,7 +574,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -597,7 +599,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -780,7 +782,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -809,7 +811,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 my-2 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">MESLEKİ EĞİTİMLER</span>
@@ -1008,7 +1010,7 @@
 							Eğitimlerimize ait duyuru, kampanya ve haberlerimizi takip edebilirsiniz.</small>
 					</div>
 					<div class="align-self-end">
-						<a href="authentication/layouts/corporate/sign-in.html"
+						<a href="blog-1.html"
 							class="btn bg-gray-200 bg-hover-gray-400 ">
 							<b>Bloga gözat</b>
 						</a>
@@ -1246,7 +1248,7 @@
 						Sizi bekleyen yeni fırsatları keşfedin.
 					</p>
 					<div class="flex-equal text-start">
-						<a href="authentication/layouts/corporate/sign-in.html"
+						<a href="sign-in.html"
 							class="btn btn-danger fw-bolder me-5 me-lg-3">
 							Hemen Başlayın
 						</a>
@@ -1303,7 +1305,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -1340,7 +1342,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
