--- a/homepage-4.html
+++ b/homepage-4.html
@@ -41,10 +41,10 @@
 			<div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg">
 				<!--begin::Header-->
 				<div class="top-bar d-flex justify-content-between px-lg-5">
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="eu-logo" alt="Logo" src="assets/media/logos/eu-logo.svg" />
 					</a>
-					<a class="d-flex align-items-center" href="landing.html">
+					<a class="d-flex align-items-center" href="homepage-1.html">
 						<img class="top-logo" alt="Logo" src="assets/media/logos/light-logo.svg" />
 					</a>
 				</div>
@@ -61,25 +61,27 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<ul class="nav nav-tabs nav-line-tabs fs-6">
 								<li class="nav-item">
-									<a class="nav-link h-50px active" data-bs-toggle="tab"
-										href="#kt_tab_pane_1">Anasayfa</a>
+									<a class="nav-link h-48px border-active-danger border-top-2 active"
+										href="homepage-1.html">Anasayfa</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_2">Tüm Eğitimler</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="education-list.html">Tüm Eğitimler</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link h-48px border-active-danger border-top-2" data-bs-toggle="tab"
-										href="#kt_tab_pane_4">Blog</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="blog-1.html">Blog</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_5">Biz Kimiz</a>
+								<li class="nav-item nav-item d-none d-lg-inline">
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="about-us.html">Biz Kimiz</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_6">SSS</a>
+									<a class="nav-link h-48px border-active-danger border-top-2" href="faq.html">SSS</a>
 								</li>
 								<li class="nav-item d-none d-lg-inline">
-									<a class="nav-link h-50px" data-bs-toggle="tab" href="#kt_tab_pane_7">İletişim</a>
+									<a class="nav-link h-48px border-active-danger border-top-2"
+										href="contact-us.html">İletişim</a>
 								</li>
 							</ul>
 						</div>
@@ -111,7 +113,7 @@
 								</button>
 								<!--end::Mobile menu toggle-->
 								<!--begin::Logo image-->
-								<a href="landing.html">
+								<a href="homepage-1.html">
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 										class="logo-default h-25px h-lg-30px" />
 									<img alt="Logo" src="assets/media/logos/dark-logo.svg"
@@ -189,12 +191,11 @@
 							<!--end::Menu wrapper-->
 							<!--begin::Toolbar-->
 							<div class="flex-equal text-end ms-1 d-flex justify-content-end">
-								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center"></i>
+								<i class="bi bi-bell-fill fs-4 text-gray-700 align-self-center d-none d-md-inline-block"></i>
 								<i class="bi bi-heart-fill fs-4 text-gray-700 mx-4 lg-mx-8 align-self-center"></i>
-								<a href="authentication/layouts/corporate/sign-in.html"
+								<a href="sign-in.html"
 									class="btn bg-gray-200 bg-hover-gray-400 fw-bolder me-1 me-lg-4">Giriş Yap</a>
-								<a href="authentication/layouts/corporate/sign-in.html"
-									class="btn btn-danger d-none d-md-inline fw-bolder">
+								<a href="sign-up.html" class="btn btn-danger d-none d-md-inline fw-bolder">
 									Ücretsiz Kaydol
 								</a>
 							</div>
@@ -217,11 +218,10 @@
 								Etik Hacker olmaya adım atın!
 							</p>
 							<div class="flex-equal text-start">
-								<a href="authentication/layouts/corporate/sign-in.html"
-									class="btn btn-danger fw-bolder me-5 me-lg-3">
+								<a href="sign-in.html" class="btn btn-danger fw-bolder me-5 me-lg-3">
 									Hemen Başlayın
 								</a>
-								<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark fw-bolder">
+								<a href="education-list.html" class="btn btn-dark fw-bolder">
 									Tüm eğitimleri keşfedin
 								</a>
 							</div>
@@ -236,7 +236,8 @@
 									data-tns-speed="2000" data-tns-autoplay="true" data-tns-autoplay-timeout="18000"
 									data-tns-controls="true" data-tns-nav="false" data-tns-items="1"
 									data-tns-center="false" data-tns-dots="false"
-									data-tns-prev-button="#banner_slider_prev" data-tns-next-button="#banner_slider_next"
+									data-tns-prev-button="#banner_slider_prev"
+									data-tns-next-button="#banner_slider_next"
 									data-tns-responsive="{1200: {items: 1.5}, 992: {items: 1}}">
 									<!--begin::Item-->
 									<div>
@@ -312,7 +313,7 @@
 							data-tns-responsive="{1200: {items: 4}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -337,7 +338,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -362,7 +363,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -387,7 +388,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -436,7 +437,7 @@
 						<h4 class="text-danger mb-4">EĞİTİMLER</h4>
 						<h2 class="fs-2x fw-bold">Popüler Eğitimler</h2>
 					</div>
-					<div class="align-self-end">
+					<div class="align-self-end d-none d-md-inline-block">
 						<!--begin::Button-->
 						<button class="btn btn-icon btn-active-color-dark rounded-circle me-5" id="popular_slider_prev"
 							style="border:1px solid #E1E3EA; width:3rem;height:3rem;">
@@ -462,7 +463,7 @@
 							data-tns-responsive="{1200: {items: 3.5}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -487,7 +488,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-2.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -512,7 +513,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-3.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-secondary h-20px">GELİŞİM EĞİTİMLERİ</span>
@@ -537,7 +538,7 @@
 							<!--end::Item-->
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">TEKNOLOJİ EĞİTİMLERİ</span>
@@ -720,7 +721,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
@@ -749,7 +750,7 @@
 						<div class="col-md-4 px-4">
 							<!--begin::Item-->
 							<div class="card border-0 my-2 mx-4">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="course"
 									src="assets/media/course/course-4.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-info h-20px">MESLEKİ EĞİTİMLER</span>
@@ -948,8 +949,7 @@
 							Eğitimlerimize ait duyuru, kampanya ve haberlerimizi takip edebilirsiniz.</small>
 					</div>
 					<div class="align-self-end">
-						<a href="authentication/layouts/corporate/sign-in.html"
-							class="btn bg-gray-200 bg-hover-gray-400 ">
+						<a href="blog-1.html" class="btn bg-gray-200 bg-hover-gray-400 ">
 							<b>Bloga gözat</b>
 						</a>
 					</div>
@@ -1175,82 +1175,80 @@
 		<!--end::How It Works Section-->
 
 		<!--begin::Landing hero-->
-				<div class="d-lg-flex w-100 min-h-350px min-h-lg-500px py-lg-20">
-					<div class="flex-equal align-self-center py-20 py-md-0 px-10">
-						<div class="mx-auto" style="max-width: 40rem">
-							<h1 class="text-gray-900 fs-4x fw-bold mb-8">
-								Temel Fotoğrafçılık Eğitimi’ne hemen katılabilirsiniz
-							</h1>
-							<p class="text-gray-500 fs-4 mb-5">
-								Uygulamalı olarak en güncel yazılımlarla birlikte Siber Güvenlik kariyerinize başlayın,
-								Etik Hacker olmaya adım atın!
-							</p>
-							<div class="flex-equal text-start">
-								<a href="authentication/layouts/corporate/sign-in.html"
-									class="btn btn-danger fw-bolder me-5 me-lg-3">
-									Hemen Başlayın
-								</a>
-								<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark fw-bolder">
-									Tüm eğitimleri keşfedin
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="flex-equal align-self-center mobile-banner">
-						<div class="card-wrapper cyber-security-slider mw-650px">
-							<!--begin::Slider-->
-							<div class="tns tns-default w-100" style="direction: ltr">
-								<!--begin::Wrapper-->
-								<div data-tns="true" data-tns-loop="true" data-tns-swipe-angle="false"
-									data-tns-speed="2000" data-tns-autoplay="true" data-tns-autoplay-timeout="18000"
-									data-tns-controls="true" data-tns-nav="false" data-tns-items="1"
-									data-tns-center="false" data-tns-dots="false"
-									data-tns-prev-button="#banner_slider_prev2" data-tns-next-button="#banner_slider_next2"
-									data-tns-responsive="{1200: {items: 1.5}, 992: {items: 1}}">
-									<!--begin::Item-->
-									<div>
-										<img class="mw-100 w-100 mh-400px card-rounded-top" alt="calculate"
-											src="assets/media/course/course-photo.svg" />
-									</div>
-									<!--end::Item-->
-									<!--begin::Item-->
-									<div>
-										<img class="mw-100 w-100 mh-400px card-rounded-top" alt="calculate"
-											src="assets/media/course/course-calculate.svg" />
-									</div>
-									<!--end::Item-->
-									<!--begin::Item-->
-									<div>
-										<img class="mw-100 w-100 mh-400px card-rounded-top" alt="cyber-security"
-											src="assets/media/course/course-cyber.svg" />
-									</div>
-									<!--end::Item-->
-								</div>
-								<!--end::Wrapper-->
-							</div>
-							<!--begin::Button-Wrapper-->
-							<div style="display:flex;justify-content:center;align-items:center;margin-top:1rem">
-								<!--begin::Button-->
-								<button class="btn btn-icon btn-active-color-primary rounded-circle w-30px h-30px me-3"
-									id="banner_slider_prev2" style="border: 1px solid #E1E3EA">
-									<i class="ki-duotone ki-left fs-xl"></i>
-								</button>
-								<!--end::Button-->
-								<!--begin::Button-->
-								<button class="btn btn-icon btn-active-color-primary rounded-circle w-30px h-30px"
-									id="banner_slider_next2" style="border: 1px solid #E1E3EA">
-									<i class="ki-duotone ki-right fs-xl"></i>
-								</button>
-								<!--end::Button-->
-							</div>
-							<!--end::Button-Wrapper-->
-							<!--end::Slider-->
-						</div>
-
-						<!--end::Story-->
+		<div class="d-lg-flex w-100 min-h-350px min-h-lg-500px py-lg-20">
+			<div class="flex-equal align-self-center py-20 py-md-0 px-10">
+				<div class="mx-auto" style="max-width: 40rem">
+					<h1 class="text-gray-900 fs-4x fw-bold mb-8">
+						Temel Fotoğrafçılık Eğitimi’ne hemen katılabilirsiniz
+					</h1>
+					<p class="text-gray-500 fs-4 mb-5">
+						Uygulamalı olarak en güncel yazılımlarla birlikte Siber Güvenlik kariyerinize başlayın,
+						Etik Hacker olmaya adım atın!
+					</p>
+					<div class="flex-equal text-start">
+						<a href="sign-in.html" class="btn btn-danger fw-bolder me-5 me-lg-3">
+							Hemen Başlayın
+						</a>
+						<a href="education-list.html" class="btn btn-dark fw-bolder">
+							Tüm eğitimleri keşfedin
+						</a>
 					</div>
 				</div>
-				<!--end::Landing hero-->
+			</div>
+			<div class="flex-equal align-self-center mobile-banner">
+				<div class="card-wrapper cyber-security-slider mw-650px">
+					<!--begin::Slider-->
+					<div class="tns tns-default w-100" style="direction: ltr">
+						<!--begin::Wrapper-->
+						<div data-tns="true" data-tns-loop="true" data-tns-swipe-angle="false" data-tns-speed="2000"
+							data-tns-autoplay="true" data-tns-autoplay-timeout="18000" data-tns-controls="true"
+							data-tns-nav="false" data-tns-items="1" data-tns-center="false" data-tns-dots="false"
+							data-tns-prev-button="#banner_slider_prev2" data-tns-next-button="#banner_slider_next2"
+							data-tns-responsive="{1200: {items: 1.5}, 992: {items: 1}}">
+							<!--begin::Item-->
+							<div>
+								<img class="mw-100 w-100 mh-400px card-rounded-top" alt="calculate"
+									src="assets/media/course/course-photo.svg" />
+							</div>
+							<!--end::Item-->
+							<!--begin::Item-->
+							<div>
+								<img class="mw-100 w-100 mh-400px card-rounded-top" alt="calculate"
+									src="assets/media/course/course-calculate.svg" />
+							</div>
+							<!--end::Item-->
+							<!--begin::Item-->
+							<div>
+								<img class="mw-100 w-100 mh-400px card-rounded-top" alt="cyber-security"
+									src="assets/media/course/course-cyber.svg" />
+							</div>
+							<!--end::Item-->
+						</div>
+						<!--end::Wrapper-->
+					</div>
+					<!--begin::Button-Wrapper-->
+					<div style="display:flex;justify-content:center;align-items:center;margin-top:1rem">
+						<!--begin::Button-->
+						<button class="btn btn-icon btn-active-color-primary rounded-circle w-30px h-30px me-3"
+							id="banner_slider_prev2" style="border: 1px solid #E1E3EA">
+							<i class="ki-duotone ki-left fs-xl"></i>
+						</button>
+						<!--end::Button-->
+						<!--begin::Button-->
+						<button class="btn btn-icon btn-active-color-primary rounded-circle w-30px h-30px"
+							id="banner_slider_next2" style="border: 1px solid #E1E3EA">
+							<i class="ki-duotone ki-right fs-xl"></i>
+						</button>
+						<!--end::Button-->
+					</div>
+					<!--end::Button-Wrapper-->
+					<!--end::Slider-->
+				</div>
+
+				<!--end::Story-->
+			</div>
+		</div>
+		<!--end::Landing hero-->
 
 		<!--begin::Footer Section-->
 		<div class="mb-0 bg-gray-100">
@@ -1294,7 +1292,7 @@
 						<div class="col-12 col-lg-4 pe-lg-16 mb-10 mb-lg-0 text-center text-lg-start">
 							<!--begin::Block-->
 							<!--begin::Logo image-->
-							<a href="landing.html">
+							<a href="homepage-1.html">
 								<img alt="Logo" src="assets/media/logos/dark-logo.svg"
 									class="logo-default h-25px h-lg-40px" />
 							</a>
@@ -1331,7 +1329,7 @@
 											<span class="path1"></span>
 											<span class="path2"></span>
 										</i>
-										<div>
+										<div class="overflow-hidden">
 											<div class="fs-6 text-gray-500">Sorularınız mı var?</div>
 											<div class="fw-semibold fs-6">info@novargelms.com.tr</div>
 										</div>
