--- a/sign-in.html
+++ b/sign-in.html
@@ -42,7 +42,7 @@
 			<!--end::Aside-->
 			<!--begin::Body-->
 			<div class="d-flex flex-column flex-lg-row-fluid w-lg-50 p-10 order-0 order-lg-1">
-				<a href="landing.html">
+				<a href="homepage-1.html">
 					<img alt="Logo" src="assets/media/logos/dark-logo.svg" class="logo-default h-25px h-lg-40px" />
 				</a>
 				<!--begin::Form-->
